--- a/index.html
+++ b/index.html
@@ -252,7 +252,6 @@
    
   </ul>
 </section>
-
 <section id="resume">
   <h2>Resume</h2>
   <a href="./Name list for IBM SkillsBuild.pdf" target="_blank" class="download-button">Download CV</a>
@@ -260,7 +259,7 @@
 
 <section id="contact">
   <h2>Contact</h2>
-  <p>Email: <a href="mailto:vignesh@example.com">vignesh@example.com</a></p>
+  <p>Email: <a href="mailto:24bca021@mscartsandscience-edu.in">24bca021@mscartsandscience-edu.in</a></p>
   <p>Phone: +91-7550263184</p>
   <p>Location: Chennai, India</p>
   <div style="margin-top: 1rem;">
