--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="./style.css">
 
 </head>
+  <img src="./yakoop.jpeg" alt="Profile Picture" class="profile-picture" id="profileImage" style="margin: 0 1rem 0 0; align-self: flex-start;">
+  <div style="text-align: left;">
 <body>
 <!-- partial:index.partial.html -->
 <!DOCTYPE html>
